Mock list of news

--- a/frontEnd/src/app/news/news.component.html
+++ b/frontEnd/src/app/news/news.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row new-header">
     <div class="col-md-8 col-lg-8 col-xs-12">
       <md-card>
         <img md-card-image src="assets/images/background.jpg" class="heading-img">
@@ -14,6 +14,62 @@
       <button md-raised-button color="primary">
         LEARN MORE!!
       </button>
+    </div>
+  </div>
+  <md-divider class="news-divider"></md-divider>
+  <div class="row">
+    <div id="column-wrap">
+      <div class="col-md-4 col-sm-6">
+        <md-card>
+          <img md-card-image src="assets/images/news1.jpg" class="news-img">
+          <md-card-content>
+            <h5>Card title is here</h5>
+            <p>Here is some more content for this card</p>
+          </md-card-content>
+          <md-card-actions>
+            <button md-raised-button color="primary">LEARN MORE</button>
+          </md-card-actions>
+        </md-card>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <md-card>
+          <img md-card-image src="assets/images/news2.jpg" class="news-img">
+          <md-card-content>
+            <h5>Card title is here</h5>
+            <p>Here is some more content for this card</p>
+          </md-card-content>
+          <md-card-actions>
+            <button md-raised-button color="primary">LEARN MORE</button>
+          </md-card-actions>
+        </md-card>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <md-card>
+          <img md-card-image src="assets/images/news3.jpg" class="news-img">
+          <md-card-content>
+            <h5>Card title is here</h5>
+            <p>Here is some more content for this card</p>
+          </md-card-content>
+          <md-card-actions>
+            <button md-raised-button color="primary">LEARN MORE</button>
+          </md-card-actions>
+        </md-card>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <md-card>
+          <img md-card-image src="assets/images/news4.jpg" class="news-img">
+          <md-card-content>
+            <h5>Card title is here</h5>
+            <p>Here is some more content for this card</p>
+          </md-card-content>
+          <md-card-actions>
+            <button md-raised-button color="primary">LEARN MORE</button>
+          </md-card-actions>
+        </md-card>
+      </div>
     </div>
   </div>
 </div>
