--- a/frontEnd/src/app/news/news.component.scss
+++ b/frontEnd/src/app/news/news.component.scss
@@ -6,4 +6,24 @@
   .heading-text {
     font-size: 36px;
   }
+  .news-divider {
+    margin: 24px 0;
+  }
+
+  md-card {
+    margin-bottom: 24px;
+  }
+
+  #column-wrap {
+    
+  }
+
+  .col-md-4 {
+    
+  }
+
+  .news-img {
+    height: 200px;
+    max-height: 200px;
+  }
 }
