--- a/frontEnd/src/app/news/news.component.html
+++ b/frontEnd/src/app/news/news.component.html
@@ -12,7 +12,7 @@
         fermentum erat ac fermentum sollicitudin. Suspendisse molestie dolor risus. Aenean at massa risus. Vivamus porta
         ornare lorem, ut dignissim justo commodo vulputate. Donec ultricies laoreet molestie.!</p>
       <button md-raised-button color="primary">
-        LEARN MORE!!
+        LEARN MORE
       </button>
     </div>
   </div>
@@ -24,10 +24,12 @@
           <img md-card-image src="assets/images/news1.jpg" class="news-img">
           <md-card-content>
             <h5>Card title is here</h5>
-            <p>Here is some more content for this card</p>
+            <p class="news-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet ornare augue. Morbi pretium, libero at efficitur condimentum, massa dolor posuere eros, id elementum lorem leo in velit. Quisque imperdiet erat in lobortis accumsan. Maecenas id metus aliquam dui dapibus sodales pellentesque a augue
+            </p>
           </md-card-content>
           <md-card-actions>
-            <button md-raised-button color="primary">LEARN MORE</button>
+            <button md-button color="primary">LEARN MORE</button>
           </md-card-actions>
         </md-card>
       </div>
@@ -37,10 +39,12 @@
           <img md-card-image src="assets/images/news2.jpg" class="news-img">
           <md-card-content>
             <h5>Card title is here</h5>
-            <p>Here is some more content for this card</p>
+            <p class="news-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet ornare augue. Morbi pretium, libero at efficitur condimentum, massa dolor posuere eros, id elementum lorem leo in velit. Quisque imperdiet erat in lobortis accumsan. Maecenas id metus aliquam dui dapibus sodales pellentesque a augue
+            </p>
           </md-card-content>
           <md-card-actions>
-            <button md-raised-button color="primary">LEARN MORE</button>
+            <button md-button color="primary">LEARN MORE</button>
           </md-card-actions>
         </md-card>
       </div>
@@ -50,10 +54,27 @@
           <img md-card-image src="assets/images/news3.jpg" class="news-img">
           <md-card-content>
             <h5>Card title is here</h5>
-            <p>Here is some more content for this card</p>
+            <p class="news-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet ornare augue. Morbi pretium, libero at efficitur condimentum, massa dolor posuere eros, id elementum lorem leo in velit. Quisque imperdiet erat in lobortis accumsan. Maecenas id metus aliquam dui dapibus sodales pellentesque a augue
+            </p>
           </md-card-content>
           <md-card-actions>
-            <button md-raised-button color="primary">LEARN MORE</button>
+            <button md-button color="primary">LEARN MORE</button>
+          </md-card-actions>
+        </md-card>
+      </div>
+
+        <div class="col-md-4 col-sm-6">
+        <md-card>
+          <img md-card-image src="assets/images/news1.jpg" class="news-img">
+          <md-card-content>
+            <h5>Card title is here</h5>
+            <p class="news-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet ornare augue. Morbi pretium, libero at efficitur condimentum, massa dolor posuere eros, id elementum lorem leo in velit. Quisque imperdiet erat in lobortis accumsan. Maecenas id metus aliquam dui dapibus sodales pellentesque a augue
+            </p>
+          </md-card-content>
+          <md-card-actions>
+            <button md-button color="primary">LEARN MORE</button>
           </md-card-actions>
         </md-card>
       </div>
@@ -63,10 +84,42 @@
           <img md-card-image src="assets/images/news4.jpg" class="news-img">
           <md-card-content>
             <h5>Card title is here</h5>
-            <p>Here is some more content for this card</p>
+            <p class="news-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet ornare augue. Morbi pretium, libero at efficitur condimentum, massa dolor posuere eros, id elementum lorem leo in velit. Quisque imperdiet erat in lobortis accumsan. Maecenas id metus aliquam dui dapibus sodales pellentesque a augue
+            </p>
           </md-card-content>
           <md-card-actions>
-            <button md-raised-button color="primary">LEARN MORE</button>
+            <button md-button color="primary">LEARN MORE</button>
+          </md-card-actions>
+        </md-card>
+      </div>
+      
+      <div class="col-md-4 col-sm-6">
+        <md-card>
+          <img md-card-image src="assets/images/news2.jpg" class="news-img">
+          <md-card-content>
+            <h5>Card title is here</h5>
+            <p class="news-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet ornare augue. Morbi pretium, libero at efficitur condimentum, massa dolor posuere eros, id elementum lorem leo in velit. Quisque imperdiet erat in lobortis accumsan. Maecenas id metus aliquam dui dapibus sodales pellentesque a augue
+            </p>
+          </md-card-content>
+          <md-card-actions>
+            <button md-button color="primary">LEARN MORE</button>
+          </md-card-actions>
+        </md-card>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <md-card>
+          <img md-card-image src="assets/images/news4.jpg" class="news-img">
+          <md-card-content>
+            <h5>Card title is here</h5>
+            <p class="news-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet ornare augue. Morbi pretium, libero at efficitur condimentum, massa dolor posuere eros, id elementum lorem leo in velit. Quisque imperdiet erat in lobortis accumsan. Maecenas id metus aliquam dui dapibus sodales pellentesque a augue
+            </p>
+          </md-card-content>
+          <md-card-actions>
+            <button md-button color="primary">LEARN MORE</button>
           </md-card-actions>
         </md-card>
       </div>
