--- a/frontEnd/src/app/news/news.component.scss
+++ b/frontEnd/src/app/news/news.component.scss
@@ -26,4 +26,12 @@
     height: 200px;
     max-height: 200px;
   }
+
+  .news-description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+  }
 }
