--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -17,8 +17,8 @@
     <md-card class="user-card">
       <md-card-header>
           <img md-card-avatar src="assets/images/logo.png">
-          <md-card-title>Eugene</md-card-title>
-          <md-card-subtitle>cuongnm265@gmail.com</md-card-subtitle>
+          <md-card-title class="username-text">Eugene</md-card-title>
+          <md-card-subtitle class="email-text">cuongnm265@gmail.com</md-card-subtitle>
       </md-card-header>
       <!--<img md-card-image src="assets/images/background.jpg">-->
       <!--<md-card-content>
