--- a/frontEnd/src/styles.css
+++ b/frontEnd/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/core/theming/prebuilt/purple-green.css';
+/*@import '~@angular/material/core/theming/prebuilt/pink-bluegrey.css';*/
+@import '~@angular/material/core/theming/prebuilt/indigo-pink.css';
 body {
     margin: 0px;
 }
