--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -1,16 +1,19 @@
 <div class="container" *ngIf="articlesList" >
   <div class="row article-header">
-    <div class="col-md-8 col-lg-8 col-xs-12">
+    <div class="col-md-7 col-lg-7 col-xs-12">
       <md-card>
         <img md-card-image src={{articlesList[0].headerImagePath}} class="heading-img">
       </md-card>
     </div>
-    <div class="col-md-4 col-lg-4 col-xs-12">
-      <h1 class="heading-text">{{articlesList[0].articleHeaderTitle}}</h1>
-      <p>
+    <div class="col-md-5 col-lg-5 col-xs-12">
+      <h3 class="heading-text"
+          md-tooltip={{articlesList[0].articleHeaderTitle}}>
+        {{articlesList[0].articleHeaderTitle}}</h3>
+      <p md-tooltip={{articlesList[0].articleHeaderDescription}}>
         {{articlesList[0].articleHeaderDescription}}
       </p>
-      <button md-raised-button color="primary">
+      <button md-raised-button
+              color="primary">
         LEARN MORE
       </button>
     </div>
@@ -19,19 +22,26 @@
   <div class="row">
     <div class="col-md-4 col-sm-6" *ngFor="let article of articlesList | slice:1">
       <md-card>
-        <img md-card-image src={{article.headerImagePath}} class="articles-img">
+        <img 
+          md-card-image 
+          src={{article.headerImagePath}} 
+          class="articles-img"
+        >
         <md-card-content>
-          <h4 class="article-title">{{article.articleHeaderTitle}}</h4>
-          <p class="article-description">
+          <h4 class="article-title" md-tooltip={{article.articleHeaderTitle}}>{{article.articleHeaderTitle}}</h4>
+          <p class="article-description" md-tooltip={{article.articleHeaderDescription}}>
             {{article.articleHeaderDescription}}
           </p>
         </md-card-content>
         <md-card-actions>
-          <button md-button color="primary">LEARN MORE</button>
+          <button 
+            md-button 
+            color="primary">
+            LEARN MORE</button>
         </md-card-actions>
       </md-card>
       <div class="clearfix visible-sm-block"></div> 
     </div>
-    
   </div>
 </div>
+<router-outlet></router-outlet>
