No content page and add api url

--- a/frontEnd/src/app/article/article.component.scss
+++ b/frontEnd/src/app/article/article.component.scss
@@ -43,3 +43,17 @@
     -webkit-box-orient: vertical;
   }
 }
+
+.container-notfound {
+  height: 100%;
+  .wrapper {
+    height: 100%;
+    text-align: center;
+    margin-top: 50px;
+
+    .notfound-text {
+      margin-top: 20px;
+      font-size: 30px;
+    }
+  }
+}
