--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="articlesList" >
+<div class="container" *ngIf="articlesList && articlesList.length > 0">
   <div class="row article-header">
     <div class="col-md-7 col-lg-7 col-xs-12">
       <md-card>
@@ -6,14 +6,12 @@
       </md-card>
     </div>
     <div class="col-md-5 col-lg-5 col-xs-12">
-      <h3 class="heading-text"
-          md-tooltip={{articlesList[0].articleHeaderTitle}}>
+      <h3 class="heading-text" md-tooltip={{articlesList[0].articleHeaderTitle}}>
         {{articlesList[0].articleHeaderTitle}}</h3>
       <p md-tooltip={{articlesList[0].articleHeaderDescription}}>
         {{articlesList[0].articleHeaderDescription}}
       </p>
-      <button md-raised-button
-              color="primary">
+      <button md-raised-button color="primary">
         LEARN MORE
       </button>
     </div>
@@ -22,11 +20,7 @@
   <div class="row">
     <div class="col-md-4 col-sm-6" *ngFor="let article of articlesList | slice:1">
       <md-card>
-        <img 
-          md-card-image 
-          src={{article.headerImagePath}} 
-          class="articles-img"
-        >
+        <img md-card-image src={{article.headerImagePath}} class="articles-img">
         <md-card-content>
           <h4 class="article-title" md-tooltip={{article.articleHeaderTitle}}>{{article.articleHeaderTitle}}</h4>
           <p class="article-description" md-tooltip={{article.articleHeaderDescription}}>
@@ -34,14 +28,18 @@
           </p>
         </md-card-content>
         <md-card-actions>
-          <button 
-            md-button 
-            color="primary">
+          <button md-button color="primary">
             LEARN MORE</button>
         </md-card-actions>
       </md-card>
-      <div class="clearfix visible-sm-block"></div> 
+      <div class="clearfix visible-sm-block"></div>
     </div>
+  </div>
+</div>
+<div class="container-notfound" *ngIf="!articlesList || articlesList.length == 0">
+  <div class="wrapper">
+    <img class="notfound-img" src="assets/images/not-found.png" />
+    <p class="notfound-text">Opps! There is no article yet. Keep calm and go back again</p>
   </div>
 </div>
 <router-outlet></router-outlet>
