Styling no content page again

--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -39,7 +39,9 @@
 <div class="container-notfound" *ngIf="!articlesList || articlesList.length == 0">
   <div class="wrapper">
     <img class="notfound-img" src="assets/images/not-found.png" />
-    <p class="notfound-text">Opps! There is no article yet. Keep calm and go back again</p>
+    <p class="notfound-text">Opps! There is no article yet.</p>
+    <p class="notfound-text">Keep calm and go back again.</p>
+    <p class="notfound-text"> 💔 💔 💔 </p>
   </div>
 </div>
 <router-outlet></router-outlet>
