--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -6,9 +6,9 @@
       </md-card>
     </div>
     <div class="col-md-5 col-lg-5 col-xs-12">
-      <h3 class="heading-text" md-tooltip={{articlesList[0].articleHeaderTitle}}>
+      <h3 class="heading-text">
         {{articlesList[0].articleHeaderTitle}}</h3>
-      <p md-tooltip={{articlesList[0].articleHeaderDescription}}>
+      <p>
         {{articlesList[0].articleHeaderDescription}}
       </p>
       <button md-raised-button color="primary">
