--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -22,8 +22,8 @@
       <md-card>
         <img md-card-image src={{article.headerImagePath}} class="articles-img">
         <md-card-content>
-          <h4 class="article-title" md-tooltip={{article.articleHeaderTitle}}>{{article.articleHeaderTitle}}</h4>
-          <p class="article-description" md-tooltip={{article.articleHeaderDescription}}>
+          <h4 class="article-title">{{article.articleHeaderTitle}}</h4>
+          <p class="article-description">
             {{article.articleHeaderDescription}}
           </p>
         </md-card-content>
