--- a/frontEnd/src/app/article/article.component.scss
+++ b/frontEnd/src/app/article/article.component.scss
@@ -58,3 +58,19 @@
     }
   }
 }
+
+header {
+  height: 80vh;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  .content {
+    padding: 30px;
+    text-shadow: 0 1px 0 black; 
+    margin: 0;
+    color: white;
+    text-shadow: 0 1px 0 black;
+  }
+}
