--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -1,49 +1,16 @@
-<!--<div class="module" *ngIf="articlesList && articlesList.length > 0" [ngStyle]="{'background-image': 'linear-gradient(rgba(0, 0, 0, 0.11), rgba(0, 0, 0, 0.72)), url('+ articlesList[0].headerImagePath + ')'}">
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img [src]="articlesList[0].headerImagePath" alt="Chania">
+<header class="module" *ngIf="articlesList && articlesList.length > 0">
+  <carousel [interval]="myInterval" [noWrap]="noWrapSlides" style="width: 100%">
+    <slide *ngFor="let article of articlesList; let index=index">
+      <img [src]="article.headerImagePath" style="margin:auto; width: 100%; height: 100%">
+      <div class="carousel-caption">
+        <h4>Slide {{index}}</h4>
+        <p>{{article.text}}</p>
       </div>
+    </slide>
+  </carousel>
+</header>
 
-      <div class="item">
-        <img [src]="articlesList[0].headerImagePath" alt="Chania">
-      </div>
 
-      <div class="item">
-        <img [src]="articlesList[0].headerImagePath" alt="Flower">
-      </div>
-
-      <div class="item">
-        <img [src]="articlesList[0].headerImagePath" alt="Flower">
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>-->
-
-<kb-page-slider>
-    <div *kbPages="let page of pages" class="page" [style.background]="page.color">
-        <h1>{{page.title}}</h1>
-    </div>
-</kb-page-slider>
 <div class="container" *ngIf="articlesList && articlesList.length > 0">
   <md-divider class="articles-divider"></md-divider>
   <div class="row">
