--- a/frontEnd/src/app/app.component.scss
+++ b/frontEnd/src/app/app.component.scss
@@ -26,6 +26,8 @@
   width: 300px;
 }
 
-md-tab-group {
-  background: transparent;
+@media screen and (max-width: 800px) {
+  .category-button {
+    display: none;
+  }
 }
