--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -1,5 +1,5 @@
 <header class="module" *ngIf="articlesList && articlesList.length > 0">
-  <carousel [interval]="myInterval" [noWrap]="noWrapSlides" style="width: 100%">
+  <!--<carousel [interval]="myInterval" [noWrap]="noWrapSlides" style="width: 100%">
     <slide *ngFor="let article of articlesList; let index=index">
       <img [src]="article.headerImagePath" style="margin:auto; width: 100%; height: 100%">
       <div class="carousel-caption">
@@ -7,7 +7,7 @@
         <p>{{article.text}}</p>
       </div>
     </slide>
-  </carousel>
+  </carousel>-->
 </header>
 
 
