--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -3,8 +3,6 @@
     <button md-icon-button (click)="start.toggle()" class="menu-btn">
       <md-icon class="md-24">menu</md-icon>
     </button>
-    <button class="btn btn-primary btn-margin" (click)="auth.login()" *ngIf="!auth.authenticated()">Log In</button>
-    <button class="btn btn-primary btn-margin" (click)="auth.logout()" *ngIf="auth.authenticated()">Log Out</button>
     <span id="header-title"> Frog Coffee News </span>
     <span class="remaining-space"></span>
     <!--<span>
@@ -12,19 +10,25 @@
         <md-icon class="md-24">menu</md-icon>
       </button>
     </span>-->
-
+    <button class="category-button" 
+      md-button 
+      *ngFor="let category of categoryList" 
+      [routerLink]="['/article', category.categoryName | lowercase]"  
+    > 
+      {{category.categoryName}} 
+    </button>
   </md-toolbar>
-  <md-tab-group>
-    <md-tab *ngFor="let category of categoryList" label={{category.categoryName}}>
-      <app-article [name]="category.categoryName"></app-article>
-    </md-tab>
-  </md-tab-group>
   <md-sidenav class="md-sidenav-left" #start mode="over">
     <md-card class="user-card">
-      <md-card-header>
+      <md-card-header *ngIf="checkProfile()" >
+        <img md-card-avatar [src]="user.picture">
+        <md-card-title class="username-text">{{user.firstName}} {{user.lastName}}</md-card-title>
+        <md-card-subtitle class="email-text">{{user.email}}</md-card-subtitle>
+      </md-card-header>
+      <md-card-header *ngIf="!checkProfile()" >
         <img md-card-avatar src="assets/images/logo.png">
-        <md-card-title class="username-text">Eugene</md-card-title>
-        <md-card-subtitle class="email-text">cuongnm265@gmail.com</md-card-subtitle>
+        <md-card-title class="username-text">anonymous</md-card-title>
+        <md-card-subtitle class="email-text">anonymous@gmail.com</md-card-subtitle>
       </md-card-header>
       <!--<img md-card-image src="assets/images/background.jpg">-->
       <!--<md-card-content>
@@ -32,42 +36,52 @@
     </md-card-content>-->
     </md-card>
     <md-nav-list>
-      <md-list>
         <md-list-item>
           <a md-line href="#">Bookmarks</a>
           <button md-icon-button>
             <md-icon>bookmark</md-icon>
-        </button>
+          </button>
         </md-list-item>
         <md-divider></md-divider>
         <md-list-item>
           <a md-line href="#">Favorites</a>
           <button md-icon-button>
             <md-icon>favorite</md-icon>
-        </button>
+          </button>
         </md-list-item>
         <md-divider></md-divider>
         <md-list-item>
           <a md-line href="#">Account</a>
           <button md-icon-button>
             <md-icon>person</md-icon>
-        </button>
+          </button>
         </md-list-item>
         <md-list-item>
           <a md-line href="#">Comment</a>
           <button md-icon-button>
             <md-icon>comment</md-icon>
-        </button>
+          </button>
         </md-list-item>
         <md-list-item>
           <button md-icon-button>
             <md-icon>settings</md-icon>
-        </button>
+          </button>
           <a md-line href="#">Setting</a>
-
         </md-list-item>
-      </md-list>
+        <md-divider></md-divider>
+        <md-list-item *ngIf="!auth.authenticated()">
+          <button md-icon-button>
+            <md-icon>vpn_key</md-icon>
+          </button>
+          <a md-line (click)="auth.login()">Log In</a>
+        </md-list-item>
+         <md-list-item *ngIf="auth.authenticated()">
+          <button md-icon-button>
+            <md-icon>vpn_key</md-icon>
+          </button>
+          <a md-line (click)="auth.logout()">Log Out</a>
+        </md-list-item>
     </md-nav-list>
   </md-sidenav>
+  <router-outlet></router-outlet> 
 </md-sidenav-layout>
-<router-outlet></router-outlet>
