--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -30,57 +30,53 @@
         <md-card-title class="username-text">anonymous</md-card-title>
         <md-card-subtitle class="email-text">anonymous@gmail.com</md-card-subtitle>
       </md-card-header>
-      <!--<img md-card-image src="assets/images/background.jpg">-->
-      <!--<md-card-content>
-        <p>Here is some more content</p>
-    </md-card-content>-->
     </md-card>
     <md-nav-list>
-        <md-list-item>
-          <a md-line href="#">Bookmarks</a>
-          <button md-icon-button>
-            <md-icon>bookmark</md-icon>
-          </button>
-        </md-list-item>
-        <md-divider></md-divider>
-        <md-list-item>
-          <a md-line href="#">Favorites</a>
-          <button md-icon-button>
-            <md-icon>favorite</md-icon>
-          </button>
-        </md-list-item>
-        <md-divider></md-divider>
-        <md-list-item>
-          <a md-line href="#">Account</a>
-          <button md-icon-button>
-            <md-icon>person</md-icon>
-          </button>
-        </md-list-item>
-        <md-list-item>
-          <a md-line href="#">Comment</a>
-          <button md-icon-button>
-            <md-icon>comment</md-icon>
-          </button>
-        </md-list-item>
-        <md-list-item>
-          <button md-icon-button>
-            <md-icon>settings</md-icon>
-          </button>
-          <a md-line href="#">Setting</a>
-        </md-list-item>
-        <md-divider></md-divider>
-        <md-list-item *ngIf="!auth.authenticated()">
-          <button md-icon-button>
-            <md-icon>vpn_key</md-icon>
-          </button>
-          <a md-line (click)="auth.login()">Log In</a>
-        </md-list-item>
-         <md-list-item *ngIf="auth.authenticated()">
-          <button md-icon-button>
-            <md-icon>vpn_key</md-icon>
-          </button>
-          <a md-line (click)="auth.logout()">Log Out</a>
-        </md-list-item>
+      <!--<md-list-item>
+        <a md-line href="#">Bookmarks</a>
+        <button md-icon-button>
+          <md-icon>bookmark</md-icon>
+        </button>
+      </md-list-item>-->
+      <md-divider></md-divider>
+      <md-list-item>
+        <a md-line href="#">Favorites</a>
+        <button md-icon-button>
+          <md-icon>favorite</md-icon>
+        </button>
+      </md-list-item>
+      <md-divider></md-divider>
+      <md-list-item>
+        <a md-line href="#">Account</a>
+        <button md-icon-button>
+          <md-icon>person</md-icon>
+        </button>
+      </md-list-item>
+      <md-list-item>
+        <a md-line href="#">Comment</a>
+        <button md-icon-button>
+          <md-icon>comment</md-icon>
+        </button>
+      </md-list-item>
+      <md-list-item>
+        <button md-icon-button>
+          <md-icon>settings</md-icon>
+        </button>
+        <a md-line href="#">Setting</a>
+      </md-list-item>
+      <md-divider></md-divider>
+      <md-list-item *ngIf="!auth.authenticated()">
+        <button md-icon-button>
+          <md-icon>vpn_key</md-icon>
+        </button>
+        <a md-line (click)="auth.login()">Log In</a>
+      </md-list-item>
+        <md-list-item *ngIf="auth.authenticated()">
+        <button md-icon-button>
+          <md-icon>vpn_key</md-icon>
+        </button>
+        <a md-line (click)="auth.logout()">Log Out</a>
+      </md-list-item>
     </md-nav-list>
   </md-sidenav>
   <router-outlet></router-outlet> 
