--- a/frontEnd/src/app/article/article.component.scss
+++ b/frontEnd/src/app/article/article.component.scss
@@ -59,18 +59,32 @@
   }
 }
 
-header {
+.header-grid {
   height: 80vh;
+  padding: 0 !important;
+  
+}
+
+
+.header {
+  padding: 0 !important;
+  height: 90vh;
   background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+  height: 90vh; 
+  background: rgba(0, 0, 0, 0.79);
   .content {
     padding: 30px;
-    text-shadow: 0 1px 0 black; 
     margin: 0;
     color: white;
-    text-shadow: 0 1px 0 black;
+    position: absolute;
+    bottom: 0;
   }
+}
+
+md-grid-tile figure {
+  align-items: flex-end !important;
 }
