--- a/frontEnd/src/styles.css
+++ b/frontEnd/src/styles.css
@@ -3,8 +3,8 @@
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
 body {
     margin: 0px;
+    font-family: 'Noto Sans', sans-serif !important;
 }
-
 
 .loader {
   position: absolute;
