--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -6,7 +6,7 @@
               [rowspan]=1>
   <div class="content">
     <h3>{{article.articleHeaderTitle}}</h3>
-    <p *ngIf="i == 0" >{{article.articleHeaderDescription}}</p>
+    <p class="description" *ngIf="i == 0" >{{article.articleHeaderDescription}}</p>
     <p>by <b>{{article.author}}</b></p>
   </div>
 </md-grid-tile>
