--- a/frontEnd/src/app/article/article.component.scss
+++ b/frontEnd/src/app/article/article.component.scss
@@ -60,30 +60,32 @@
 }
 
 .header-grid {
-  height: 80vh;
-  padding: 0 !important;
-  
-}
-
-
-.header {
-  padding: 0 !important;
   height: 90vh;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  height: 90vh; 
-  background: rgba(0, 0, 0, 0.79);
-  .content {
-    padding: 30px;
-    margin: 0;
-    color: white;
-    position: absolute;
-    bottom: 0;
+  padding: 0 !important;
+  background-color: #2c2c35;
+  .header {
+    padding: 0 !important;
+    height: 90vh;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    .content {
+      padding: 30px;
+      margin: 0;
+      color: white;
+      position: absolute;
+      bottom: 0;
+      .description {
+        color: #cecece;
+        line-height: 1.5;
+      }
+    }
   }
 }
+
+
 
 md-grid-tile figure {
   align-items: flex-end !important;
