--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -24,7 +24,7 @@
           </p>
         </md-card-content>
         <md-card-actions>
-          <button md-button color="primary">
+          <button md-button color="primary" (click)="doTest(article.idArticle)">
             LEARN MORE</button>
         </md-card-actions>
       </md-card>
@@ -39,4 +39,11 @@
     <p class="notfound-text">Keep calm and go back again.</p>
     <p class="notfound-text"> 💔 💔 💔 </p>
   </div>
+</div>
+<div class="fb-comments" data-href="http://localhost:4200/home" data-width="600px" data-numposts="5"></div>
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
 </div>
