--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -25,7 +25,7 @@
           </p>
         </md-card-content>
         <md-card-actions>
-          <button md-button color="primary" (click)="doTest(article.idArticle)">
+          <button md-button color="primary" [routerLink]="['/',categoryName | lowercase,'articles',article.idArticle]"  >
             LEARN MORE</button>
         </md-card-actions>
       </md-card>
@@ -41,10 +41,4 @@
     <p class="notfound-text"> 💔 💔 💔 </p>
   </div>
 </div>
-<div class="fb-comments" data-href="http://localhost:4200/home" data-width="600px" data-numposts="5"></div>
-<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
+
