--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -14,10 +14,8 @@
   </header>
 
   <div class="row article-content-row">
-    <div class="col-md-12 col-sm-12">
-    </div>
     <div class="col-md-2 col-sm-2 col-xs-12">
-      <p>Publish by:</p>
+      <p><b>Publish by:</b></p>
       <div>
         <figure>
           <img src="https://byuc.files.wordpress.com/2012/07/avat-2.jpg" alt="#" style="height: 80px; width: 80px; border-radius: 50%">
@@ -26,13 +24,13 @@
         <h6>{{article.date | date:'medium'}}</h6>
       </div>
     </div>
-    <div class="col-md-7 col-sm-6 col-xs-12 article-body">
+    <div class="col-md-7 col-sm-7 col-xs-12 article-body">
       <div [innerHTML] = "article.articleContent" class="text-body"></div>
     </div>
-    <div class="col-md-3 col-sm-4 col-xs-12">
+    <div class="col-md-3 col-sm-3 col-xs-12 related-articles">
       <p><b>Related Stories</b></p>
       <div *ngIf="relatedArticleList" >
-        <div class="row" 
+        <div class="row related-article-row" 
             *ngFor="let relatedArticle of relatedArticleList | slice:0:4; let i = index" 
             [hidden]="relatedArticleList[i].idArticle == article.idArticle"
             style="margin-bottom: 20px"
@@ -50,6 +48,10 @@
     </div>
   </div>
 
+  <div class="comment-line row col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2">
+    <h4>Comments</h4>
+    <div class="line"></div>
+  </div>
   <div>
     <div *ngFor="let comment of article.comments">
       <p>{{comment.content}}</p>
