--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -11,8 +11,7 @@
           <p>by <b>{{article.author}}</b></p>
         </div>
     </div>
-  </header>
-
+  </header>    
   <div class="row article-content-row">
     <div class="col-md-2 col-sm-2 col-xs-12">
       <p><b>Publish by:</b></p>
@@ -23,6 +22,20 @@
         <h6>{{article.author}}</h6>
         <h6>{{article.date | date:'medium'}}</h6>
       </div>
+      <div class="row">
+        <div class="col-md-2 col-sm-2 col-md-offset-5 col-sm-offset-5">
+          <share-buttons
+            [pinterest]="false"
+            [linkedIn]="false"
+            [tumblr]="false"
+            [reddit]="false"
+            [stumbleUpOn]="false"
+            [url]="'https://twitter.com'"
+            >
+          </share-buttons>
+        </div>
+      </div>
+      
     </div>
     <div class="col-md-7 col-sm-7 col-xs-12 article-body">
       <div [innerHTML] = "article.articleContent" class="text-body"></div>
