--- a/frontEnd/src/app/articles-list/articles-list.component.html
+++ b/frontEnd/src/app/articles-list/articles-list.component.html
@@ -1,3 +1,47 @@
-<p>
-  articles-list works!
-</p>
+<div class="articles-list-container">
+  <button pButton type="button" (click)="toggle()" style="margin-bottom:10px" label="Toggle" icon="fa-list"></button>
+  <input #gb type="text" placeholder="Global search" pInputText>
+  <button type="button" pButton icon="fa-plus" style="float:right" (click)="showDialogToAdd()" label="Add">
+  </button>
+  <p-dataTable  [value]="articlesList" 
+              [rows]="10" 
+              [paginator]="true" 
+              [pageLinks]="3" 
+              [responsive]="true" 
+              [stacked]="stacked"
+              [globalFilter]="gb"
+              selectionMode="single" [(selection)]="selectedArticle" (onRowSelect)="onRowSelect($event)">
+    <header>Articles List</header>
+    <p-column field="articleHeaderTitle" header="Title"></p-column>
+    <p-column field="date" header="Date"></p-column>
+    <p-column field="author" header="Author"></p-column>
+    <p-column field="source" header="Source"></p-column>
+  </p-dataTable>
+<!--
+  <p-dialog header="Article Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade">
+      <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="article">
+          <div class="ui-grid-row">
+              <div class="ui-grid-col-4"><label for="title">Title</label></div>
+              <div class="ui-grid-col-8"><input pInputText id="title" [(ngModel)]="article.articleHeaderTitle" /></div>
+          </div>
+          <div class="ui-grid-row">
+              <div class="ui-grid-col-4"><label for="date">Date</label></div>
+              <div class="ui-grid-col-8"><input pInputText id="date" [(ngModel)]="article.date" /></div>
+          </div>
+          <div class="ui-grid-row">
+              <div class="ui-grid-col-4"><label for="author">Author</label></div>
+              <div class="ui-grid-col-8"><input pInputText id="author" [(ngModel)]="article.author" /></div>
+          </div>
+          <div class="ui-grid-row">
+              <div class="ui-grid-col-4"><label for="source">Source</label></div>
+              <div class="ui-grid-col-8"><input pInputText id="source" [(ngModel)]="article.source" /></div>
+          </div>
+      </div>
+      <footer>
+          <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
+              <button type="button" pButton icon="fa-close" (click)="delete()" label="Delete"></button>
+              <button type="button" pButton icon="fa-check" (click)="save()" label="Save"></button>
+          </div>
+      </footer>
+  </p-dialog>-->
+</div>
