user list and articles list

--- a/frontEnd/src/app/admin/admin.component.html
+++ b/frontEnd/src/app/admin/admin.component.html
@@ -20,7 +20,7 @@
       </md-card-header>
     </md-card>
       
-    <md-nav-list>
+    <md-nav-list dense>
       <md-list-item>
         <a md-line href="#">Dashboard</a>
         <button md-icon-button>
