--- a/frontEnd/src/app/articles-list/articles-list.component.html
+++ b/frontEnd/src/app/articles-list/articles-list.component.html
@@ -1,10 +1,18 @@
 <div class="articles-list-container">
-  <button pButton type="button" (click)="toggle()" style="margin-bottom:10px" label="Toggle" icon="fa-list"></button>
+  <button pButton type="button" (click)="toggle()" 
+          style="margin-bottom:10px" label="Desktop" 
+          icon="fa-desktop"
+          *ngIf="!stacked">
+  </button>
+  <button pButton type="button" (click)="toggle()" 
+          style="margin-bottom:10px" label="Mobile" 
+          icon="fa-mobile" *ngIf="stacked">
+  </button>
   <input #gb type="text" placeholder="Global search" pInputText>
-  <button type="button" pButton icon="fa-plus" style="float:right" (click)="showDialogToAdd()" label="Add">
+  <button type="button" pButton icon="fa-plus" style="float:right" (click)="openDialog()" label="Add">
   </button>
   <p-dataTable  [value]="articlesList" 
-              [rows]="10" 
+              [rows]="4" 
               [paginator]="true" 
               [pageLinks]="3" 
               [responsive]="true" 
@@ -17,31 +25,4 @@
     <p-column field="author" header="Author"></p-column>
     <p-column field="source" header="Source"></p-column>
   </p-dataTable>
-<!--
-  <p-dialog header="Article Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade">
-      <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="article">
-          <div class="ui-grid-row">
-              <div class="ui-grid-col-4"><label for="title">Title</label></div>
-              <div class="ui-grid-col-8"><input pInputText id="title" [(ngModel)]="article.articleHeaderTitle" /></div>
-          </div>
-          <div class="ui-grid-row">
-              <div class="ui-grid-col-4"><label for="date">Date</label></div>
-              <div class="ui-grid-col-8"><input pInputText id="date" [(ngModel)]="article.date" /></div>
-          </div>
-          <div class="ui-grid-row">
-              <div class="ui-grid-col-4"><label for="author">Author</label></div>
-              <div class="ui-grid-col-8"><input pInputText id="author" [(ngModel)]="article.author" /></div>
-          </div>
-          <div class="ui-grid-row">
-              <div class="ui-grid-col-4"><label for="source">Source</label></div>
-              <div class="ui-grid-col-8"><input pInputText id="source" [(ngModel)]="article.source" /></div>
-          </div>
-      </div>
-      <footer>
-          <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
-              <button type="button" pButton icon="fa-close" (click)="delete()" label="Delete"></button>
-              <button type="button" pButton icon="fa-check" (click)="save()" label="Save"></button>
-          </div>
-      </footer>
-  </p-dialog>-->
 </div>
