--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -12,13 +12,6 @@
         </div>
     </div>
   </header>    
-  <div class="row">
-    <share-buttons
-
-      [url]="'https://twitter.com'"
-      >
-    </share-buttons>
-  </div>
   <div class="row article-content-row">
     <div class="col-md-2 col-sm-2 col-xs-12">
       <p><b>Publish by:</b></p>
@@ -55,14 +48,27 @@
     </div>
   </div>
 
-  <div class="comment-line row col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2">
-    <h4>Comments</h4>
-    <div class="line"></div>
+  <div class="row">
+    <div class="comment-line col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2">
+      <h4>Share to your friend</h4>
+      <div class="line"></div>
+    </div>
   </div>
-  <div>
+  <div class="row">
+    <div class="col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2">
+      <share-buttons [pinterest]="false"></share-buttons>
+    </div>
+  </div>
+  <div class="row">
+    <div class="comment-line col-md-7 col-sm-7 col-md-offset-2 col-sm-offset-2">
+      <h4>Comments</h4>
+      <div class="line"></div>
+    </div>
+  </div>
+  <!--<div>
     <div *ngFor="let comment of article.comments">
       <p>{{comment.content}}</p>
     </div>
-  </div>
+  </div>-->
 </div>
 <!--<div id="fb-root"></div>-->
