--- a/frontEnd/src/app/user/user.component.html
+++ b/frontEnd/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <md-sidenav-layout fullscreen>
-  <md-toolbar color="primary">
+  <md-toolbar color="primary" style="height: 10vh;">
     <button md-icon-button (click)="start.toggle()" class="menu-btn">
       <md-icon class="md-24">menu</md-icon>
     </button>
