Commit Article Request, User Request ,Comment Fetching
- Article Request: Get, Post, Modify, Remove
- User Request: get users by role, lock/unlock useraccount
- Comment Fetching: Refactor fetching comment, add timestamp for comment

--- a/frontEnd/src/app/article-detail/article-detail.component.html
+++ b/frontEnd/src/app/article-detail/article-detail.component.html
@@ -4,8 +4,9 @@
   <div>
     <div *ngFor="let comment of article.comments">
       <p>{{comment.content}}</p>
+      <p>{{getCommentPeriod(comment.time)}}</p>
     </div>
   </div>
+  
 </article>
-<div id="fb-root"></div>
 
