--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -25,7 +25,7 @@
           </p>
         </md-card-content>
         <md-card-actions>
-          <button md-button color="primary" [routerLink]="['/',categoryName | lowercase,'articles',article.idArticle]"  >
+          <button md-button color="primary" [routerLink]="['/',categoryName | lowercase, article.idArticle]"  >
             LEARN MORE</button>
         </md-card-actions>
       </md-card>
