Minor change in routing

--- a/frontEnd/src/app/article/article.component.html
+++ b/frontEnd/src/app/article/article.component.html
@@ -32,7 +32,7 @@
           </p>
         </md-card-content>
         <md-card-actions>
-          <button md-button color="primary" [routerLink]="['/',categoryName | lowercase, article.idArticle]"  >
+          <button md-button color="primary" [routerLink]="['/news',categoryName | lowercase, article.idArticle]"  >
             LEARN MORE</button>
         </md-card-actions>
       </md-card>
