--- a/frontEnd/src/app/admin/admin.component.html
+++ b/frontEnd/src/app/admin/admin.component.html
@@ -4,7 +4,7 @@
       <!--<button md-icon-button (click)="start.toggle()" class="menu-btn">
         <md-icon class="md-24">menu</md-icon>
       </button>-->
-      <span id="header-title"> Frog Coffee News </span>
+      <span [routerLink]="['/news/all']" id="header-title"> Frog Coffee News </span>
       <span class="remaining-space"></span>
     </md-toolbar>
     <md-card class="user-card">
