--- a/frontEnd/src/app/pizza-dialog/pizza-dialog.component.html
+++ b/frontEnd/src/app/pizza-dialog/pizza-dialog.component.html
@@ -1,15 +1,16 @@
-<form (ngSubmit)="onSubmit()" #articleForm="ngForm">
+<form (ngSubmit)="onSubmit(articleForm.value)" #articleForm="ngForm">
   <h1 md-dialog-title>Article Details</h1>
   <md-dialog-content>
 
       <md-input-container style="width: 100%">
-        <input md-input maxlength="100"
+        <input md-input 
+               maxlength="100"
                id="title"
                required
                [(ngModel)]="articleDetail.articleHeaderTitle" 
-               name="title"
+               name="articleHeaderTitle"
                placeholder="Title" 
-               #title="ngModel" >
+               >
         <!--<md-hint align="end">{{title.value.length}} / 100</md-hint>-->
       </md-input-container>
 
@@ -18,27 +19,36 @@
                   required
                   [(ngModel)]="articleDetail.articleHeaderDescription"         
                   id="description"
-                  name="description"
-                  #description="ngModel">
+                  name="articleHeaderDescription"
+                  >
         </textarea>
         <!--<md-hint align="end">{{description.value.length}} / 200</md-hint>-->
       </md-input-container>
 
       <table style="width: 100%" cellspacing="0">
         <tr>
-          <td><md-input-container style="width: 100%">
-            <input md-input placeholder="Category" required
-                  [(ngModel)]="articleDetail.category"
-                  id="category"
-                  name="category"
-                  #category="ngModel">
-          </md-input-container></td>
+          <td>
+              <div style="width: 100%">
+                <select name="category" 
+                        id="category"
+                        [(ngModel)]="articleDetail.category"
+                        required
+                        md-input
+                        style="width: 80%">
+                    <option *ngFor="let category of categories; let i = index;" 
+                            [value]="category.idCategory"
+                            [selected]="i == 0">
+                      {{category.categoryName}}
+                    </option>
+                </select>
+            </div>
+          </td>
           <td><md-input-container style="width: 100%">
             <input md-input placeholder="Author" required
                   [(ngModel)]="articleDetail.author"         
                   id="author"
                   name="author"
-                  #author="ngModel">
+                  >
           </md-input-container></td>
         </tr>
       </table>
@@ -46,6 +56,6 @@
   </md-dialog-content>
   <md-dialog-actions>
     <button style="float: right" md-button md-dialog-close>Cancel</button>  
-    <button type="submit" style="float: right" md-button (click)="dialogRef.close('yes')">Submit</button>
+    <button type="submit" style="float: right" md-button>Submit</button>
   </md-dialog-actions>
 </form>
