--- a/frontEnd/src/app/user/user.component.html
+++ b/frontEnd/src/app/user/user.component.html
@@ -3,7 +3,7 @@
     <button md-icon-button (click)="start.toggle()" class="menu-btn">
       <md-icon class="md-24">menu</md-icon>
     </button>
-    <span id="header-title"> Frog Coffee News </span>
+    <span [routerLink]="['/news/all']" id="header-title"> Frog Coffee News </span>
     <span class="remaining-space"></span>
     <!--<span>
       <button md-icon-button (click)="start.toggle()" class="menu-btn">
